objects/mcdm_15__DefaultPersonalizationSettings__c.object
<CustomObject>
    <description>Stores org, campaign, and user default personalization settings.</description>
    <fields>
        <fullName>mcdm_15__Greeting__c</fullName>
        <description>The default greeting to be used</description>
        <label>Greeting</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mcdm_15__HierarchyId__c</fullName>
        <description>The Id corresponding to the hierarchy type</description>
        <label>Hierarchy ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mcdm_15__HierarchyType__c</fullName>
        <description>The hierarchical level at which the setting is applicable</description>
        <label>Hierarchy Type</label>
        <precision>1</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mcdm_15__ObjectId__c</fullName>
        <description>The Id for the specific Object the setting is for</description>
        <label>Object ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mcdm_15__ObjectType__c</fullName>
        <description>The type of Object the setting is for</description>
        <label>Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mcdm_15__SendFrom__c</fullName>
        <description>The default from name to be used</description>
        <label>From Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mcdm_15__Signature__c</fullName>
        <description>The default signature to be used</description>
        <label>Signature</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Default Personalization Settings</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Default Personalization Settings</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Default Personalization Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>